--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -58,10 +58,33 @@ header.masthead .device-container .screen img {
 }
 
 .videowrapper {
-  position: relative !important;
-  padding-bottom: 56.25% !important;
-  padding-top: 25% !important;
-  height: 0 !important;
+  position: fixed !important;
+  // padding-bottom: 56.25% !important;
+  // padding-top: 25% !important;
+  top: 20 !important;
+  left: 20 !important;
+  height: 100% !important;
+}
+
+.appvideo {
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-top: 6px;
+}
+
+.film-background {
+    background-image: url('../img/mobile.png');
+    background-size: 16em;
+    height: 600px;
+    background-repeat: no-repeat;
+}
+
+.film-background2 {
+   z-index: 2;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
 }
 
 .videowrapper iframe{
